# outlook-junk-mail-mover

./: .env.example  .gitignore  LICENSE  README.md  README.zh-CN.md  README.zh-TW.md  outlook_junk_mover.py  pyproject.toml  requirements.txt
tests/: test_outlook_junk_mover.py
